--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         <div class="con_icon">
             <a href="#"><i class="fa-brands fa-instagram"></i></a>
             <a href="https://www.linkedin.com/in/aditisr" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="https://github.com/Aditi080203" target="_blank"><i class="fa-brands fa-github"></i></a>
+            <a href="https://github.com/ShhAditi" target="_blank"><i class="fa-brands fa-github"></i></a>
         </div>
         <div class="copyright">
             <p>Copyright © Aditi.</p>
